--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -30,9 +30,9 @@
             text-align: center;
         }
         .wrap {
-            max-width: 100%; /* Ensure text stays within container width */
-            word-wrap: break-word; /* Break words when necessary */
-            overflow-wrap: break-word; /* Ensure wrapping for overflow */
+            max-width: 100%;
+            word-wrap: break-word;
+            overflow-wrap: break-word;
             display: inline-block;
         }
         .sect {
@@ -60,8 +60,8 @@
         }
         .cb li {
             display: flex;
-            align-items: center; /* Center vertically */
-            justify-content: center; /* Center horizontally */
+            align-items: center;
+            justify-content: center;
             margin-bottom: 10px;
             font-size: 22px;
             font-family: 'Times New Roman';
