--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             background-color: linen;
+            text-align: center;
         }
         h1 {
             text-align: center;
@@ -77,7 +78,11 @@
         <div class = "sect">
             <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/possible_quiz_page/build/web/" target = "_blank">The (Barely) Possible Quiz</a>
         </div>
-        <p class = "centered-text">blah blah blah</p>
+        <p class = "centered-text">A cool quiz</p>
+        <img src="Screenshot 2024-12-13 174936.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/possible_quiz_page/build/web/" target = "_blank">The (Almost) Impossible Quiz</a>
+        </div>
     </div>
 </body>
 </html>
