--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -79,10 +79,38 @@
             <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/possible_quiz_page/build/web/" target = "_blank">The (Barely) Possible Quiz</a>
         </div>
         <p class = "centered-text">A cool quiz</p>
-        <img src="Screenshot 2024-12-13 174936.png" alt="w" width="500">
+        <img src="Screenshot 2024-12-14 122927.png" alt="w" width="500">
         <div class = "sect">
             <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/possible_quiz_page/build/web/" target = "_blank">The (Almost) Impossible Quiz</a>
         </div>
+        <p class = "centered-text">Another cool quiz</p>
+        <img src="Screenshot 2024-12-14 123312.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/funky_functions/build/web/" target = "_blank">Funky Functions</a>
+        </div>
+        <p class = "centered-text">Design machines to solve various number puzzles</p>
+        <img src="Screenshot 2025-01-28 162608.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/prisoners_sim/build/web/" target = "_blank">Prisoner's Dilemma Simulator</a>
+        </div>
+        <p class = "centered-text">Simulate a population of individuals playing different strategies</p>
+        <img src="Screenshot 2025-01-28 163255.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/stereomaker/build/web/" target = "_blank">Stereogram Maker</a>
+        </div>
+        <p class = "centered-text">Convert your drawings into custom stereograms</p>
+        <img src="Screenshot 2024-12-13 174936.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/multigamer/build/web/" target = "_blank">Multigamer</a>
+        </div>
+        <p class = "centered-text">Play 4 games at the same time (if 1 isn't enough)</p>
+        <img src="Screenshot 2025-01-28 163811.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/square/build/web/" target = "_blank">The Little Square</a>
+        </div>
+        <p class = "centered-text">square.</p>
+        <img src="Screenshot 2025-01-28 164258.png" alt="w" width="500">
+
     </div>
 </body>
 </html>
