--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -110,6 +110,11 @@
         </div>
         <p class = "centered-text">square.</p>
         <img src="Screenshot 2025-01-28 164258.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/confetti/build/web/" target = "_blank">Confetti Game</a>
+        </div>
+        <p class = "centered-text">This shouldn't even exist. But it's fun anyway.</p>
+        <img src="Screenshot 2025-01-28 183722.png" alt="w" width="500">
 
     </div>
 </body>
