--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -68,6 +68,7 @@
             font-family: 'Times New Roman';
         }
     </style>
+    <link rel="icon" type = "image/png" href="Screenshot 2025-01-29 102318.png">
 </head>
 <body>
     <div class = "fullsect">
