--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -116,6 +116,11 @@
         </div>
         <p class = "centered-text">This shouldn't even exist. But it's fun anyway.</p>
         <img src="Screenshot 2025-01-28 183722.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/parallel/build/web/" target = "_blank">Parallel</a>
+        </div>
+        <p class = "centered-text">Beat 20 parallel versions of 1 level</p>
+        <img src="Screenshot 2025-02-04 202710.png" alt="w" width="500">
 
     </div>
 </body>
