--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -126,6 +126,16 @@
         </div>
         <p class = "centered-text">8 simple GiiKER slider puzzles</p>
         <img src="Screenshot 2025-03-03 194957.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/monkeytyping/build/web/" target = "_blank">Infinite Monkey Simulator</a>
+        </div>
+        <p class = "centered-text">Find out how fast monkeys can type out Shakespeare plays</p>
+        <img src="Screenshot 2025-04-01 210807.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/rockpaperscissors/build/web/" target = "_blank">Rock Paper Scissors Simulator</a>
+        </div>
+        <p class = "centered-text">Pit a population of rock, paper, and scissors players against one another.</p>
+        <img src="Screenshot 2025-04-01 211306.png" alt="w" width="500">
     </div>
 </body>
 </html>
