--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -136,6 +136,11 @@
         </div>
         <p class = "centered-text">Pit a population of rock, paper, and scissors players against one another.</p>
         <img src="Screenshot 2025-04-01 211306.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/password_game" target = "_blank">The Password Game 2</a>
+        </div>
+        <p class = "centered-text">My 25-rule version of the Password Game</p>
+        <img src="Screenshot 2025-05-03 001606.png" alt="w" width="700">
     </div>
 </body>
 </html>
