--- a/flags/index.html
+++ b/flags/index.html
@@ -8,7 +8,7 @@
 <body>
     <input type="text" id="textbox">
     <button onclick="submit()">Submit</button>
-    <p id="flag">Flag quiz</p>
+    <p id="flag" style="font-size: 30px;">Flag quiz</p>
     <p id="corrector"></p>
     <script src="main.js"></script>
     <input type="text" id="lower">
