--- a/game_hub/index.html
+++ b/game_hub/index.html
@@ -146,6 +146,11 @@
         </div>
         <p class = "centered-text">Test your geography, math, literacy, memory, and reaction time</p>
         <img src="Screenshot 2025-10-13 153443.png" alt="w" width="500">
+        <div class = "sect">
+            <a style = "color: black;" href = "https://aadithakkar.github.io/webpages/escape/build/web/" target = "_blank">Escape Room</a>
+        </div>
+        <p class = "centered-text">Solve puzzles to escape a mysterious room</p>
+        <img src="Screenshot 2025-11-08 202817.png" alt="w" width="500">
         
     </div>
 </body>
